web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-async-static-class-method/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,29)
1|class X { static \u0061sync x() { await x } }
 |                           ^
[SyntaxError]: Missing semicolon or line terminator. (1,41)
1|class X { static \u0061sync x() { await x } }
 |                                       ^
